<resources>
    <string name="app_name">Hamro Classroom</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="sign_in_with_facebook">Sign In With Facebook</string>
    <string name="name">Name</string>
    <string name="i_agree_with">I agree with</string>
    <string name="terms">Terms</string>
    <string name="and">and</string>
    <string name="conditions">Conditions</string>

    <string name="facebook_app_id">392191675797153</string>
    <string name="fb_login_protocol_scheme">fb392191675797153</string>
    <string name="web_client_id">813872939086-9gnletiojkr760sk92rlis2saht2obkf.apps.googleusercontent.com</string>
    <string name="unable_to_login_message">Something went wrong!!</string>
    <string name="continue_button">Continue</string>
    <string name="warning_message_regarding_terms">Continuing automatically force you to accept our</string>
    <string name="terms_of_services">Terms of Services</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_failed">"Login failed"</string>
    <string name="phone_number">Phone Number</string>
    <string name="school">School</string>
    <string name="subjects">Subjects</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="welcome_to">Welcome\nto</string>
    <string name="went_wrong_message">Something went wrong!!</string>
    <string name="assignments">Assignments</string>
    <string name="edit">Edit</string>
    <string name="details">Details</string>
    <string name="add_subject">Add Subject</string>
    <string name="_class">Class</string>
    <string name="class_time">Class Time</string>
    <string name="add_a_new_subject">ADD A NEW SUBJECT</string>
    <string name="add_now">Add Now</string>
    <string name="subject_name">Subject\'s Name</string>
    <string name="add_link">Add Link</string>
    <string name="google_meet_or_zoom_link">Google Meet or Zoom Link</string>
    <string name="update">Update</string>
    <string name="paste_your_link_here">Paste your link here</string>
    <string name="submissions">Submissions</string>
    <string name="title">Title</string>
    <string name="attach_images_optional">Attach Images (Optional)</string>
    <string name="additional_info_optional">Additional Info (Optional)</string>
    <string name="assign_now">Assign Now</string>
    <string name="adding_to_firestore">Adding to Firestore</string>
    <string name="new_assignment">New Assignment</string>
    <string name="no_images_message">No images are attached yet!!</string>
    <string name="image_picker">Image Picker</string>
    <string name="images_if_any">Images (If any)</string>
    <string name="check">Check</string>
    <string name="no_body_submitted_yet">No body submitted yet</string>
    <string name="you_haven_t_assign_any_task_yet">You haven\'t assign any task yet</string>
    <string name="you_haven_t_added_any_subject_yet">You haven\'t added any subject yet</string>
    <string name="any_comment_optional">Any Comment (Optional)</string>
    <string name="finish_checking">Finish Checking</string>
    <string name="update_comment">Update Comment</string>
    <string name="update_your_assignment_title">Update your assignment title</string>
    <string name="finalizing_uploads">Finalizing Uploads</string>
    <string name="checked">Checked</string>
</resources>