<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginFragmentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundColor"
    tools:context=".ui.LoginFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/dashboard_drawable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/labelTexts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/socialBtnLinearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/welcomeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/denk_one"
                android:text="@string/welcome_to"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/appNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/denk_one"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="34sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/socialBtnLinearLayout"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="2"
            app:layout_constraintBottom_toTopOf="@+id/userAgreementLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <Button
                android:id="@+id/googleLoginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_google"
                android:fontFamily="@font/dekko"
                android:letterSpacing="0.1"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="@string/sign_in_with_google"
                android:textSize="14sp"
                app:cornerRadius="8dp" />

            <Button
                android:id="@+id/facebookLoginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_fb"
                android:fontFamily="@font/dekko"
                android:letterSpacing="0.1"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="@string/sign_in_with_facebook"
                android:textSize="14sp"
                app:cornerRadius="8dp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/userAgreementLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/warning_message_regarding_terms"
                android:textSize="10sp" />

            <LinearLayout
                android:id="@+id/termsAndPrivacyLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/termsOfServices"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/terms_of_services"
                    android:textColor="@color/purple_200"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/and"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/privacyPolicy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/purple_200"
                    android:textSize="10sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/overlayLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/overlay_layout_background"
            android:elevation="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:indeterminateTint="@color/primary_text_color_dark" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>