<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/updateTitleBottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="8dp"
    android:background="?android:colorBackground"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        android:id="@+id/labelTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/update_your_assignment_title"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/updateTitleInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/labelTextView"
        app:layout_constraintStart_toStartOf="@+id/labelTextView"
        app:layout_constraintTop_toBottomOf="@+id/labelTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:fontFamily="@font/dekko"
            android:hint="@string/title"
            android:inputType="textPersonName"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/updateTitleButton"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/dekko"
        android:text="@string/update"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/updateTitleInputLayout"
        app:layout_constraintStart_toStartOf="@+id/updateTitleInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/updateTitleInputLayout"
        app:layout_constraintVertical_bias="0.28"
        app:rippleColor="#00ACC1"
        app:strokeColor="@color/secondary_text_color_lite" />

    <LinearLayout
        android:id="@+id/progressBarContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/overlay_layout_background"
        android:elevation="6dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:indeterminateTint="#FDD835" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>